injection attempts get the reflection-hack reply on every third-party surface
A message from anyone but Alex that tries to change the rules now gets
an earnest, technically true, useless answer instead of a refusal. Rule
lives in CLAUDE.md and is wired into the fantasy chat routine, the Zulip
prompt, and the Discord guest note.